    - Don't attempt to migrate pid 1 itself when migrating cgroups for started
      units; works around some not yet understood cgproxy/systemd interaction.
      This particularly unbreaks cgproxy in LXC. (LP: #1491557)
    - Lower Breaks: to plymouth version which has the udev inotify fix in
      Ubuntu.
    - Change systemd-sysv's conflicts to upstart-sysv. (LP: #1422681)

 -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 13 Nov 2015 08:45:51 +0100

systemd (228-3) UNRELEASED; urgency=medium

  [ Martin Pitt ]
  * debian/rules: Remove temporary debug output from test failures again. All
    Debian buildd kernels are recent enough now, but add a check for kernels
    older than 3.13 and ignore test failures for those.
  * debian/tests/networkd: Factor out dnsmasq specific test "router" setup, so
    that we can test against other implementations.
  * debian/tests/networkd: Add router setup using an (isolated) networkd
    process for configuring the veths and DHCP server.
  * debian/tests/networkd: On failure, only show journal for current test.
  * systemd-networkd-resolvconf-update.service: Wait for getting a name
    server, not just for getting online.
  * debian/tests/boot-and-services: Wait until bash crash stack trace is in
    the journal before asserting on it. Also relax RE to work on non-x86
    architectures.
  * debian/tests/networkd: If /etc/resolv.conf already has three nameservers,
    accept that too (as then the additional test one can't be added any more).

  [ Michael Biebl ]
  * Bump Build-Depends on libdw-dev to (>= 0.158) as per configure.ac.
    (Closes: #805631)

 -- Martin Pitt <mpitt@debian.org>  Thu, 19 Nov 2015 12:09:17 +0100

systemd (228-2) unstable; urgency=medium

  * Remove wrong endianess conversion in test-siphash24 to fix FTBFS on
    big-endian machines.
  * Bump libseccomp-dev build dependency to indicate required versions for
    backporting to jessie. (Closes: #805497)
